fix(message): fixed visual bug displaying long messages on mobile

--- a/src/components/MessageBox/_style.scss
+++ b/src/components/MessageBox/_style.scss
@@ -8,7 +8,7 @@
     box-shadow: 3px 3px 8px 8px rgba(0, 0, 0, 0.04),
       10px 20px 40px 0 rgba(0, 0, 0, 0.2);
     opacity: 1;
-    max-width: 100%;
+    max-width: calc(100% - 40px);
     min-width: 210px;
     padding: 15px;
     position: relative;
